--- a/faangapp/ETL/Transform/Stocks/Stocks.ipynb
+++ b/faangapp/ETL/Transform/Stocks/Stocks.ipynb
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
        "[4530 rows x 7 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,6 +1053,19 @@
     "# Pull the from the SQl website to verify it is there\n",
     "stocks_df = pd.read_sql(\"SELECT * FROM stocks\", con=engine)\n",
     "stocks_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_stocks.to_csv(index=False)\n",
+    "compression_opts = dict(method='zip',\n",
+    "                        archive_name='allStocks.csv')  \n",
+    "new_stocks.to_csv('df.zip', index=False,\n",
+    "          compression=compression_opts) "
    ]
   },
   {
