creating new table

--- a/faangapp/ETL/Transform/Stocks/Stocks.ipynb
+++ b/faangapp/ETL/Transform/Stocks/Stocks.ipynb
@@ -1070,6 +1070,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>502</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>156.770004</td>\n",
+       "      <td>157.770004</td>\n",
+       "      <td>156.449997</td>\n",
+       "      <td>157.699997</td>\n",
+       "      <td>155.688324</td>\n",
+       "      <td>18369400</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date        Open        High         Low       Close   Adj Close  \\\n",
+       "502  2019-12-31  156.770004  157.770004  156.449997  157.699997  155.688324   \n",
+       "\n",
+       "       Volume  \n",
+       "502  18369400  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Microsoft.loc[(Microsoft[\"Date\"] == \"2019-12-31\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
