--- a/faangapp/ETL/Transform/Quarter_finances/quarter_revenue.ipynb
+++ b/faangapp/ETL/Transform/Quarter_finances/quarter_revenue.ipynb
@@ -738,10 +738,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Apple Quarterly Revenue(Millions of US $)</th>\n",
+       "      <th>Apple Quarterly Revenue(Millions of US $).1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>$111,439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-09-30</td>\n",
+       "      <td>$64,698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-06-30</td>\n",
+       "      <td>$59,685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-03-31</td>\n",
+       "      <td>$58,313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>$91,819</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Apple Quarterly Revenue(Millions of US $)  \\\n",
+       "0                                2020-12-31   \n",
+       "1                                2020-09-30   \n",
+       "2                                2020-06-30   \n",
+       "3                                2020-03-31   \n",
+       "4                                2019-12-31   \n",
+       "\n",
+       "  Apple Quarterly Revenue(Millions of US $).1  \n",
+       "0                                    $111,439  \n",
+       "1                                     $64,698  \n",
+       "2                                     $59,685  \n",
+       "3                                     $58,313  \n",
+       "4                                     $91,819  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "apple_quarter.head()"
+   ]
   },
   {
    "cell_type": "code",
