--- a/faangapp/ETL/Transform/Untitled.ipynb
+++ b/faangapp/ETL/Transform/Untitled.ipynb
@@ -183,24 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'Revenue_2020'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-bb4daa8265cf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mconsensus\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Revenue Growth'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconsensus\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRevenue_2020\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMillions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpct_change\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5272\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5273\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5274\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5275\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5276\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'Revenue_2020'"
-     ]
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Company</th>\\n      <th>Number_of_Offices</th>\\n      <th>Revenue_2019(Millions)</th>\\n      <th>Revenue_2020(Millions)</th>\\n      <th>Employees(2019)</th>\\n      <th>Employees(2020)</th>\\n      <th>Job_Oppertunities</th>\\n      <th>Stocks_Dec_2019</th>\\n      <th>Stocks_Dec_2020</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Amazon</td>\\n      <td>233</td>\\n      <td>45379.01</td>\\n      <td>51448.51</td>\\n      <td>798000</td>\\n      <td>1298000</td>\\n      <td>49705</td>\\n      <td>1847.84</td>\\n      <td>3185.27</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Apple</td>\\n      <td>26</td>\\n      <td>95868.86</td>\\n      <td>102347.86</td>\\n      <td>137000</td>\\n      <td>147000</td>\\n      <td>645</td>\\n      <td>72.68</td>\\n      <td>130.76</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Facebook</td>\\n      <td>85</td>\\n      <td>20812.72</td>\\n      <td>25735.48</td>\\n      <td>44942</td>\\n      <td>58604</td>\\n      <td>3257</td>\\n      <td>205.25</td>\\n      <td>268.11</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Netflix</td>\\n      <td>13</td>\\n      <td>5290.15</td>\\n      <td>6668.76</td>\\n      <td>8600</td>\\n      <td>9400</td>\\n      <td>506</td>\\n      <td>323.31</td>\\n      <td>514.48</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Google</td>\\n      <td>85</td>\\n      <td>45379.01</td>\\n      <td>51448.51</td>\\n      <td>118899</td>\\n      <td>235301</td>\\n      <td>3591</td>\\n      <td>1337.02</td>\\n      <td>1758.72</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Microsoft</td>\\n      <td>177</td>\\n      <td>38217.45</td>\\n      <td>42530.91</td>\\n      <td>144000</td>\\n      <td>163000</td>\\n      <td>8019</td>\\n      <td>155.69</td>\\n      <td>220.51</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "consensus['Revenue Growth'] = consensus.Revenue_2020(Millions).pct_change()"
+    "consensus.to_html()"
    ]
   },
   {
